--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   {% if jekyll.environment == 'production' %}
   {% assign custom_url = site.url | append: site.baseurl %}
-  {% assign full_base_url = site.github.url | default: custom_url %}
+  {% assign full_base_url = custom_url | default: site.github.url %}
   {% else %}
   {% assign full_base_url = site.baseurl %}
   {% endif %}
