--- a/css/main.scss
+++ b/css/main.scss
@@ -37,3 +37,21 @@ $on-laptop:        800px;
 
 // Import partials from the `minima` theme.
 @import "minima";
+
+.page-nav {
+    font-size: $small-font-size;
+    display: block;
+    width: auto;
+    overflow: hidden;
+}
+
+.page-nav a {
+    display: block;
+    width: 50%;
+    float: left;
+    margin: 1em 0;
+}
+
+.page-nav .next {
+    text-align: right;
+}
