--- a/css/main.scss
+++ b/css/main.scss
@@ -70,3 +70,9 @@ td{
     border:1px solid #000000;
     padding: 3px;
 }
+
+.center img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
