--- a/css/main.scss
+++ b/css/main.scss
@@ -76,3 +76,14 @@ td{
     margin-left: auto;
     margin-right: auto;
 }
+
+.center figcaption {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.left {
+    float: left;
+    overflow: hidden;
+}
