--- a/css/main.scss
+++ b/css/main.scss
@@ -85,5 +85,10 @@ td{
 
 .left {
     float: left;
-    overflow: hidden;
+    padding-right: 0.5em;
+}
+
+.right {
+    float: right;
+    padding-left: 0.5em;
 }
